# miniphare

./: .gitignore  .gitmessage  CMakeLists.txt  Doxyfile  cppcheck.cmake  makefile  makefile_old  miniphare.pro
src/: CMakeLists.txt  constants.h  gitsha1.cpp.in  gridconstants.h  helper.cpp  helper.h  hybridenums.h  main.cpp  miniphare.pro  src.pro  types.h  utility.cpp  utility.h  utilityphare.cpp  utilityphare.h
src/AMR/: coarsetorefinemesh.cpp  coarsetorefinemesh.h  hierarchy.cpp  hierarchy.h  mlmd.cpp  mlmd.h  mlmdinitializerfactory.cpp  mlmdinitializerfactory.h  mlmdparticleinitializer.cpp  mlmdparticleinitializer.h  particleselector.cpp  particleselector.h  particletests.cpp  particletests.h  particleutilities.cpp  particleutilities.h  patch.cpp  patch.h  patchdata.cpp  patchdata.h  patchinfo.h  refinmentanalyser.cpp  refinmentanalyser.h
src/Ampere/: ampere.cpp  ampere.h  amperefactory.h  ampereimpl.h  ampereimpl1d.cpp  ampereimpl1d.h
src/BoundaryConditions/: boundary.cpp  boundary.h  boundary_conditions.cpp  boundary_conditions.h  domainboundarycondition.cpp  domainboundarycondition.h  domainboundaryfactory.cpp  domainboundaryfactory.h  fieldbc3dcollection.cpp  fieldbc3dcollection.h  fieldbcfactory.h  frozenboundary.cpp  frozenboundary.h  leavingparticles.h  patchboundary.cpp  patchboundary.h  patchboundarycondition.cpp  patchboundarycondition.h  periodicdomainboundary.cpp  periodicdomainboundary.h  periodicfieldbc.cpp  periodicfieldbc.h  praboundarycondition.cpp  praboundarycondition.h
src/Diagnostics/: asciiexportstrategy.cpp  asciiexportstrategy.h  diagnosticfactory.cpp  diagnosticfactory.h  diagnosticmanager.cpp  diagnosticmanager.h  diagnostics.h  diagnosticscheduler.cpp  diagnosticscheduler.h  diagtype.h  electromagdiagnostic.cpp  electromagdiagnostic.h  emdiagnostic.h  exportstrategy.cpp  exportstrategy.h  exportstrategyfactory.h  fielddiagnostic.cpp  fielddiagnostic.h  fluiddiagnostic.h
src/Distributions/: distribgenerator.cpp  distribgenerator.h  distribstrategy.cpp  distribstrategy.h  maxwellianstrategy.cpp  maxwellianstrategy.h  uniformstrategy.cpp  uniformstrategy.h
src/Electromag/: electromag.cpp  electromag.h
src/Faraday/: faraday.cpp  faraday.h  faraday1d.cpp  faraday1d.h  faradayfactory.h  faradayimpl.h  faradayimpl1d.cpp  faradayimpl1d.h
src/Field/: Field.h  Field1D.h  field.cpp  field.h  field1D.cpp  field1D.h  field1d.cpp  field1d.h  fieldbc.h  fieldbc3dcollection.cpp  fieldbc3dcollection.h  fieldbcfactory.h  fieldbctype.h  periodicfieldbc.cpp  periodicfieldbc.h
src/IndexesAndWeights/: indexesandweights.cpp  indexesandweights.h  indexesandweightso1.cpp  indexesandweightso1.h  indexesandweightso2.cpp  indexesandweightso2.h  indexesandweightso3.cpp  indexesandweightso3.h  indexesandweightso4.cpp  indexesandweightso4.h
src/Initializer/: diagnosticinitializer.h  electromaginitializer.cpp  electromaginitializer.h  fluidparticleinitializer.cpp  fluidparticleinitializer.h  initializer.qmodel  initializerfactory.cpp  initializerfactory.h  ionsinitializer.cpp  ionsinitializer.h  ohminitializer.cpp  ohminitializer.h  particleinitializer.cpp  particleinitializer.h  particleinitializerimpfluid.h  particleinitializerimpl.cpp  particleinitializerimpl.h  particleinitializerimplfluid.cpp  pythoninitializerfactory.cpp  pythoninitializerfactory.h  simpleinitializerfactory.cpp  simpleinitializerfactory.h  simpleparticleinitializer.cpp  simpleparticleinitializer.h  simulationinitializerfactory.cpp  simulationinitializerfactory.h  solverinitializer.h
src/Interpolator/: indexesandweights.cpp  indexesandweights.h  indexesandweightso1.cpp  indexesandweightso2.cpp  indexesandweightso3.cpp  indexesandweightso3.h  indexesandweightso4.cpp  indexesandweightso4.h  interpolatefields.cpp  interpolatefields.h  interpolator.cpp  interpolator.h  interpolator1d.h  interpolatorfactory.h  particlemesh.cpp  particlemesh.h
src/Ohm/: ohm.cpp  ohm.h  ohmimpl1d.cpp  ohmimpl1d.h  ohmimplfactory.h
src/Plasmas/: Plasma.qmodel  electrons.cpp  electrons.h  electronsimpl1d.cpp  electronsimpl1d.h  electronsimplfactory.h  ions.cpp  ions.h  particleloader.cpp  particleloader.h  particles.cpp  particles.h  particlesbc.h  species.cpp  species.h  virtualparticle.cpp  virtualparticle.h
src/Projector/: projector.cpp  projector.h  projector1d.h  projectorfactory.h
src/Solver/: solver.cpp  solver.h
src/Splitting/: approx_1to4strategy.cpp  approx_1to4strategy.h  approx_fujistrategy.cpp  approx_fujistrategy.h  approxfujistrategy.cpp  approxfujistrategy.h  multinomial.cpp  multinomial.h  order1_allrefinestrategy.cpp  order1_allrefinestrategy.h  order1_rf2strategy.cpp  order1_rf2strategy.h  order1_rfnstrategy.cpp  order1_rfnstrategy.h  order2_rf2strategy.cpp  order2_rf2strategy.h  order3_rf2strategy.cpp  order3_rf2strategy.h  ordern_rf2strategy.cpp  ordern_rf2strategy.h  ordern_rf3strategy.cpp  ordern_rf3strategy.h  splittingstrategy.cpp  splittingstrategy.h  splittingstrategyfactory.h  strategyfonctor.h
src/Time/: time.h
src/VecField/: vecfield.cpp  vecfield.h
src/amr/: CMakeLists.txt
src/core/: CMakeLists.txt
src/data/: CMakeLists.txt
src/diagnostics/: CMakeLists.txt  diagnosticinitializer.h  diagnosticmanager.cpp  diagnosticmanager.h  diagnostics.h  diagnosticscheduler.h
src/grid/: gridlayout.cpp  gridlayout.h  gridlayoutdefs.h  gridlayoutimpl.cpp  gridlayoutimpl.h  gridlayoutimplfactory.h  gridlayoutimplinternals.cpp  gridlayoutimplinternals.h  gridlayoutimplyee.cpp  gridlayoutimplyee.h  test_gridlayout.cpp
src/initializer/: CMakeLists.txt  fluidparticleinitializer.cpp  fluidparticleinitializer.h  initializer.qmodel  initializerfactory.h  ohminitializer.cpp  simpleinitializerfactory.cpp  simpleinitializerfactory.h  simulationinitializerfactory.cpp  simulationinitializerfactory.h  solverinitializer.h
src/pusher/: ModelPusher.qmodel  modifiedboris.cpp  modifiedboris.h  odepush.py  pusher.cpp  pusher.h  pusher.qmodel  pusher1d.cpp  pusher1d.h  pusherfactory.h  pushertype.h
src/utilities/: CMakeLists.txt  box.cpp  box.h  particleselector.h  particleselectorfactory.h  (+5 more)
(+301 files in other folders)
